# spell_checker_cExercise

./: CMakeLists.txt
inc/: dictionary.h  error.h  parser.h
src/: main.cpp  parser.cpp
